<resources>

    <!--  facebook sdk  /-->
    <string name="facebook_app_id">6234701976576657</string>
    <string name="fb_login_protocol_scheme">fb6234701976576657</string>
    <string name="facebook_client_token">e36717b74291a8170d02dac0e84b4eb9</string>


    <string name="app_name">Base</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_your_spending">Track Your Spending</string>
    <string name="allinex_helps_you_track_your_spending_to_have_a_accurate_analysis_if_your_spending_is_still_within_your_budget">AllinEx helps you track your spending to have a accurate analysis if your spending is still within your budget!</string>
    <string name="allinex_provides_accurate_chart_of_your_total_spending_within_the_week_month_and_year">AllinEx provides accurate chart of your total spending within the week, month, and year!</string>
    <string name="sync_to_all_your_devices">Sync to all your devices</string>
    <string name="allinex_supports_log_in_with_google_facebook_apple_so_you_can_easily_get_your_data_across_all_your_devices">AllinEx supports log-in with google, facebook, apple so you can easily get your data across all your devices!</string>
    <string name="data_charts">Data Charts</string>
    <string name="allinex">AllinEx</string>
    <string name="easy_to_use_money_spending_tracker_app">Easy to use money spending tracker app</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="firebase_web_client_id">457234146619-f40fff56pc5ejd7fqpjibidm0sjsgu0g.apps.googleusercontent.com</string>
    <string name="login_via">Login via</string>
    <string name="or">Or</string>
    <string name="sign_out">Sign out</string>
</resources>