<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_screen_background"
    tools:context=".arch.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/allinex"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:fontFamily="@font/open_sans"
        android:text="@string/easy_to_use_money_spending_tracker_app"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_small"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login_via"
        app:layout_constraintBottom_toTopOf="@+id/google_login_button"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_login_button"
        style="@style/OutlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="100dp"
        android:text="@string/google"
        app:icon="@drawable/ic_google"
        app:iconPadding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/open_sans"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/grey_700"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_login_button"
        style="@style/OutlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/facebook"
        app:icon="@drawable/ic_facebook_logo"
        app:iconPadding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apple_login_button"
        style="@style/OutlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/apple"
        android:visibility="gone"
        app:icon="@drawable/ic_apple_logo"
        app:iconPadding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button" />

    <include
        android:id="@+id/loading_state"
        layout="@layout/loading_default" />

</androidx.constraintlayout.widget.ConstraintLayout>